fix the jlink task